{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 196,
  "lineage": "639bd95c-a6d0-8423-cca3-979e88e2feb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-west-1:325350732332:transit-gateway/tgw-0891fe99d6207d02e",
            "association_default_route_table_id": "tgw-rtb-03cc3a6ee962370c9",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "vpn",
            "dns_support": "enable",
            "id": "tgw-0891fe99d6207d02e",
            "multicast_support": "disable",
            "owner_id": "325350732332",
            "propagation_default_route_table_id": "tgw-rtb-03cc3a6ee962370c9",
            "tags": {
              "Name": "vpn-tgw"
            },
            "tags_all": {
              "Name": "vpn-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "192.168.0.0/24",
            "id": "tgw-rtb-03cc3a6ee962370c9_192.168.0.0/24",
            "transit_gateway_attachment_id": "tgw-attach-0ce8e35db1f5f9f8b",
            "transit_gateway_route_table_id": "tgw-rtb-03cc3a6ee962370c9"
          },
          "dependencies": [
            "aws_customer_gateway.sophos",
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_route_table.vpn",
            "aws_vpn_connection.vpn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:transit-gateway-route-table/tgw-rtb-0edec61d93f215e83",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0edec61d93f215e83",
            "transit_gateway_id": "tgw-0891fe99d6207d02e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0551246b0535592fd",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0167cd6951bc2b917",
              "subnet-01b517b6762ea811e",
              "subnet-0427516339b4e9683"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0891fe99d6207d02e",
            "vpc_id": "vpc-078314bac23a8290b",
            "vpc_owner_id": "325350732332"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0668c1df60c9b35ee",
            "association_id": "eipassoc-06aca757b4ba20a31",
            "domain": "vpc",
            "id": "eipalloc-0668c1df60c9b35ee",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-05ccdc92128ff7e93",
            "private_dns": "ip-10-0-10-97.eu-west-1.compute.internal",
            "private_ip": "10.0.10.97",
            "public_dns": "ec2-54-171-131-137.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.131.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04fe22dfadec6f0b6",
            "arn": "arn:aws:ec2:eu-west-1:325350732332:instance/i-049d0278ed0ce3f17",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSM-Allow-ec2",
            "id": "i-049d0278ed0ce3f17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3d295a22153b5e4",
            "private_dns": "ip-10-0-20-157.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e183a44b06e4dbd1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0972c3b8a7564ace6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080ca06fa2781f889",
            "tags": {
              "Name": "amzlinux"
            },
            "tags_all": {
              "Name": "amzlinux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0972c3b8a7564ace6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm-allow",
            "aws_iam_role.ssm",
            "aws_security_group.imcp",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04fe22dfadec6f0b6",
            "arn": "arn:aws:ec2:eu-west-1:325350732332:instance/i-0979474fbf7d7b377",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSM-Allow-ec2",
            "id": "i-0979474fbf7d7b377",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd4946ea407e5a7a",
            "private_dns": "ip-10-0-20-109.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05a6e9bb87c6186a0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0972c3b8a7564ace6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080ca06fa2781f889",
            "tags": {
              "Name": "test_ping"
            },
            "tags_all": {
              "Name": "test_ping"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0972c3b8a7564ace6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm-allow",
            "aws_iam_role.ssm",
            "aws_security_group.imcp",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:internet-gateway/igw-022ee4a77130eebda",
            "id": "igw-022ee4a77130eebda",
            "owner_id": "325350732332",
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0668c1df60c9b35ee",
            "association_id": "eipassoc-06aca757b4ba20a31",
            "connectivity_type": "public",
            "id": "nat-01e9751fa0d621ae3",
            "network_interface_id": "eni-05ccdc92128ff7e93",
            "private_ip": "10.0.10.97",
            "public_ip": "54.171.131.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0427516339b4e9683",
            "tags": {
              "Name": "NAT_Gateway_Sophos"
            },
            "tags_all": {
              "Name": "NAT_Gateway_Sophos"
            }
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:route-table/rtb-0ea759bf568e5468b",
            "id": "rtb-0ea759bf568e5468b",
            "owner_id": "325350732332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e9751fa0d621ae3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e9751fa0d621ae3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "develop-tf-route-table-private"
            },
            "tags_all": {
              "Name": "develop-tf-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:route-table/rtb-0ac2d755d0e77c6b5",
            "id": "rtb-0ac2d755d0e77c6b5",
            "owner_id": "325350732332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0891fe99d6207d02e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-022ee4a77130eebda",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "develop-tf-route-table-public"
            },
            "tags_all": {
              "Name": "develop-tf-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d21da1bf59bbd76",
            "route_table_id": "rtb-0ea759bf568e5468b",
            "subnet_id": "subnet-080ca06fa2781f889"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d80f91f3565096d",
            "route_table_id": "rtb-0ea759bf568e5468b",
            "subnet_id": "subnet-0fe124b6b6510d557"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e265e083e1114007",
            "route_table_id": "rtb-0ea759bf568e5468b",
            "subnet_id": "subnet-0e45e4087ade06004"
          },
          "dependencies": [
            "aws_eip.ip-ngw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9c28c56f684b38a",
            "route_table_id": "rtb-0ac2d755d0e77c6b5",
            "subnet_id": "subnet-0427516339b4e9683"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef352c814a405339",
            "route_table_id": "rtb-0ac2d755d0e77c6b5",
            "subnet_id": "subnet-0167cd6951bc2b917"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7af91da27065ab9",
            "route_table_id": "rtb-0ac2d755d0e77c6b5",
            "subnet_id": "subnet-01b517b6762ea811e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:security-group/sg-0972c3b8a7564ace6",
            "description": "Allow ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0972c3b8a7564ace6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "icmp-from-all",
            "name_prefix": "",
            "owner_id": "325350732332",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-080ca06fa2781f889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080ca06fa2781f889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-private-0"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-private-0"
            },
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0fe124b6b6510d557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe124b6b6510d557",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-private-1"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-private-1"
            },
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0e45e4087ade06004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e45e4087ade06004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-private-2"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-private-2"
            },
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0427516339b4e9683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0427516339b4e9683",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-public-0"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-public-0"
            },
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-0167cd6951bc2b917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0167cd6951bc2b917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-public-1"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-public-1"
            },
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:subnet/subnet-01b517b6762ea811e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b517b6762ea811e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325350732332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "develop-tf-subnet-public-2"
            },
            "tags_all": {
              "Name": "develop-tf-subnet-public-2"
            },
            "vpc_id": "vpc-078314bac23a8290b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:325350732332:vpc/vpc-078314bac23a8290b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0399cd581907eee37",
            "default_route_table_id": "rtb-01f07a48d9c09f019",
            "default_security_group_id": "sg-0a235a36f4a57e55d",
            "dhcp_options_id": "dopt-0a507622b4bd3bd76",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078314bac23a8290b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f07a48d9c09f019",
            "owner_id": "325350732332",
            "tags": {
              "Name": "VPC_Sophos"
            },
            "tags_all": {
              "Name": "VPC_Sophos"
            }
          }
        }
      ]
    }
  ]
}